--- a/src/lionbars.css
+++ b/src/lionbars.css
@@ -12,15 +12,11 @@
 .lb-h-scrollbar {
 	z-index: 1;
 	position: absolute;
-	background: #ddd;
+	background: #E7EBF0;
 
 	border-radius: 7px;
 	-webkit-border-radius: 7px;
 	-moz-border-radius: 7px;
-
-	box-shadow: inset 0 0 0 1px #ccc;
-	-webkit-box-shadow: inset 0 0 0 1px #ccc;
-	-moz-box-shadow: inset 0 0 0 1px #ccc;
 }
 .lb-v-scrollbar {
 	right: 2px;
@@ -42,7 +38,7 @@
 	position: absolute;
 	left: 0;
 	top: 0;
-	background: #666;
+	background: #97A5B4;
 
 	border-radius: 7px;
 	-webkit-border-radius: 7px;
